@@ -1,4 +1,4 @@
-AC_INIT([PDDE-CONT], [0.9.19])
+AC_INIT([PDDE-CONT], [0.9.20])
 AC_CANONICAL_SYSTEM
 AM_INIT_AUTOMAKE
 
